// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton Skeleton advanceVue demo works fine 1`] = `
<div
  class="t-skeleton-demo"
>
  <section
    class="t-skeleton-demo-card"
  >
    <div
      class="header"
    >
      组合成网页效果
    </div>
     
    <div
      class="content"
    >
      <div
        class="t-skeleton"
      >
        <div
          class="t-skeleton__row"
        >
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 33%; height: 180px;"
          >
            image
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 33%; height: 180px;"
          >
            image
          </div>
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 33%; height: 180px;"
          >
            image
          </div>
        </div>
        <div
          class="t-skeleton__row"
        >
          <div
            class="t-skeleton__col t-skeleton--type-circle"
            style="width: 50px; height: 50px;"
          />
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 80%; height: 30px; margin: 20px 0px;"
          />
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 80px; height: 30px; margin-left: 20px;"
          >
            确定
          </div>
        </div>
        <div
          class="t-skeleton__row"
        >
          <div
            class="t-skeleton__col t-skeleton--type-text"
          />
        </div>
        <div
          class="t-skeleton__row"
        >
          <div
            class="t-skeleton__col t-skeleton--type-text"
          />
        </div>
        <div
          class="t-skeleton__row"
        >
          <div
            class="t-skeleton__col t-skeleton--type-text"
            style="width: 70%; margin: 0px 0px 16px 0px;"
          />
        </div>
        <div
          class="t-skeleton__row"
        >
          <div
            class="t-skeleton__col t-skeleton--type-rect"
            style="width: 100%; height: 300px;"
          >
            <div
              class="row-col-content"
            >
              <h3
                class="row-col-content__header"
              >
                标题
              </h3>
              <section
                class="row-col-content__content"
              >
                 内容
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
   
  <section
    class="t-skeleton-demo-card"
  >
    <div
      class="header"
    >
      组合成列表效果
    </div>
     
    <div
      class="content"
    >
      <ul
        class="t-skeleton-demo-list"
      >
        <li>
          <div
            class="avatar t-skeleton"
          >
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-circle"
                style="width: 56px; height: 56px;"
              />
            </div>
          </div>
           
          <div
            class="paragraph t-skeleton"
          >
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-text"
              />
            </div>
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-text"
              />
            </div>
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 70%;"
              />
            </div>
          </div>
        </li>
        <li>
          <div
            class="avatar t-skeleton"
          >
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-circle"
                style="width: 56px; height: 56px;"
              />
            </div>
          </div>
           
          <div
            class="paragraph t-skeleton"
          >
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-text"
              />
            </div>
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-text"
              />
            </div>
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 70%;"
              />
            </div>
          </div>
        </li>
        <li>
          <div
            class="avatar t-skeleton"
          >
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-circle"
                style="width: 56px; height: 56px;"
              />
            </div>
          </div>
           
          <div
            class="paragraph t-skeleton"
          >
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-text"
              />
            </div>
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-text"
              />
            </div>
            <div
              class="t-skeleton__row"
            >
              <div
                class="t-skeleton__col t-skeleton--type-text"
                style="width: 70%;"
              />
            </div>
          </div>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`Skeleton Skeleton animationVue demo works fine 1`] = `
<div
  class="t-skeleton-demo t-row t-row--start t-row--align-top"
  style="margin-left: 0px; margin-right: 0px;"
>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        
        渐变加载动画
      
      </div>
       
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-gradient"
              style="width: 70%;"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        
        闪烁加载动画
      
      </div>
       
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text t-skeleton--animation-flashed"
              style="width: 70%;"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Skeleton Skeleton baseVue demo works fine 1`] = `
<div>
  <div
    class="mb-20 t-switch t-size-m t-is-checked"
  >
    <span
      class="t-switch__handle"
    />
    <div
      class="t-switch__content t-size-m"
    />
  </div>
   
  <div>
    <div
      class="t-skeleton"
    >
      <div
        class="t-skeleton__row"
      >
        <div
          class="t-skeleton__col t-skeleton--type-text"
        />
      </div>
      <div
        class="t-skeleton__row"
      >
        <div
          class="t-skeleton__col t-skeleton--type-text"
        />
      </div>
      <div
        class="t-skeleton__row"
      >
        <div
          class="t-skeleton__col t-skeleton--type-text"
        />
      </div>
      <div
        class="t-skeleton__row"
      >
        <div
          class="t-skeleton__col t-skeleton--type-text"
          style="width: 70%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Skeleton Skeleton delayVue demo works fine 1`] = `
<div
  class="t-skeleton-demo-delay"
>
  <div
    class="header"
  >
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        无 delay 属性快速加载数据（会闪屏）
      </span>
    </button>
     
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        有 delay 属性快速加载数据（无闪屏）
      </span>
    </button>
  </div>
   
  <div
    class="content"
  >
    <div>
      <div
        class="t-skeleton-demo-paragraph"
      >
        <p>
          
          骨架屏组件，是指当网络较慢时，在页面真实数据加载之前，给用户展示出页面的大致结构。
          一方面让用户对页面有一定的心理预期，另一方面可以改善长期停留在空白屏给用户带来的枯燥和不适感。它可以为用户提供更好视觉效果和使用体验。
        
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Skeleton Skeleton themeVue demo works fine 1`] = `
<div
  class="t-skeleton-demo t-row t-row--start t-row--align-top"
  style="margin-left: 0px; margin-right: 0px;"
>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        
        文本
      
      </div>
       
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        
        头像
      
      </div>
       
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-circle"
              style="width: 56px; height: 56px;"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        
        段落
      
      </div>
       
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="width: 70%;"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        
        头像描述
      
      </div>
       
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-circle"
            />
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 32px;"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        
        选项卡
      
      </div>
       
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 200px;"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
  <div
    class="t-col t-col-12"
    style="padding-left: 0px; padding-right: 0px;"
  >
    <section
      class="t-skeleton-demo-card"
    >
      <div
        class="header"
      >
        
        文章
      
      </div>
       
      <div
        class="content"
      >
        <div
          class="t-skeleton"
        >
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-rect"
              style="width: 100%; height: 30px;"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-rect"
              style="width: 100%; height: 200px;"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            />
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            />
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            />
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            />
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            />
          </div>
          <div
            class="t-skeleton__row"
          >
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            />
            <div
              class="t-skeleton__col t-skeleton--type-text"
              style="height: 30px;"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;
